feat: First working version with Vue
